# api_tests_pytest_requests

./: README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
fixtures/: app.py  common_models.py  validator.py
fixtures/auth/: api.py  model.py
fixtures/pay/: api.py  model.py
fixtures/register/: api.py
fixtures/store/: api.py  model.py
fixtures/store_item/: api.py  model.py
fixtures/store_items/: api.py  model.py
fixtures/user_balance/: api.py  model.py
fixtures/user_info/: api.py  model.py
tests/auth/: test_auth.py
tests/pay/: test_pay_item.py
tests/register/: test_register_new_user.py  test_registers.py
tests/store/: test_add_store.py  test_get_store.py
tests/store_item/: test_add_store_item.py  test_get_store_item.py  test_update_store_item.py
tests/store_items/: test_get_store_items.py
tests/user_balance/: test_add_user_balance.py  test_get_user_balance.py
tests/user_info/: test_add_user_info.py  test_delete_user_info.py  test_get_user_info.py  test_update_user_info.py  test_user_info.py
